syntax = "proto3";

package rol;

service RolService {
    rpc CreateRol (CreateRolRequest) returns (Rol) {}
    rpc GetRol (GetRolRequest) returns (Rol) {}
    rpc ListRoles (ListRolesRequest) returns (ListRolesResponse) {}
    rpc UpdateRol (UpdateRolRequest) returns (Rol) {}
    rpc DeleteRol (DeleteRolRequest) returns (DeleteRolResponse) {}
}

message Rol {
    int32 rol_id = 1;
    string nombre = 2;
    string descripcion = 3;
    bool esGlobal = 4;
    string createdAt = 5;
    string updatedAt = 6;
}

message CreateRolRequest {
    string nombre = 1;
    string descripcion = 2;
    bool esGlobal = 3;
}

message GetRolRequest {
    int32 rolId = 1;
}

message ListRolesRequest {
    int32 page = 1;
    int32 limit = 2;
    string search = 3;
}

message ListRolesResponse {
    repeated Rol roles = 1;
    int32 total = 2;
}

message UpdateRolRequest {
    int32 rolId = 1;
    string nombre = 2;
    string descripcion = 3;
    bool esGlobal = 4;
}

message DeleteRolRequest {
    int32 rolId = 1;
}

message DeleteRolResponse {
    bool success = 1;
}
